test/compile_errors/err_match_no_colon.w
//! expect-check-fail: expected ':' or '{'

fn main:
    let x = 5
    match x
        0 => print("zero")
        _ => print("other")
